--- a/Tarea1/app/css/informacion-producto.css
+++ b/Tarea1/app/css/informacion-producto.css
@@ -10,15 +10,6 @@ body {
     padding: 0;
     background-color: #e8ddc9;
 }
-
-.container {
-    max-width: 800px;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
 .navbar {
     display: flex;
     flex-flow: row wrap;
@@ -96,8 +87,8 @@ body {
     cursor: pointer;
 }
 .container{
-    max-width: 800px;
-    margin: 50px auto;
+    max-width: fit-content;
+    margin: 25px auto;
     padding: 20px;
     background-color: #fff;
     border-radius: 5px;
