--- a/Tareas/Tarea2/app/templates/index.html
+++ b/Tareas/Tarea2/app/templates/index.html
@@ -1,28 +1,17 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FrutiVerde Online</title>
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Roboto&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div class="navbar">
-        <img id="logo-id" src="../fruit-basket-icon.svg" alt="Logo">
-        <h1>FrutiVerde Online</h1>
-        <a class="navbar-page" href="index.html">Inicio</a>
-    </div>
+{% extends 'base.html' %}
+{% block css %}
+ <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+{% endblock %}
+{% block content %}
     <div class="container">
         <h1>Por favor selecciona una opción:</h1>
         <ul class="menu">
-            <li><a href="producto/agregar-producto.html">Agregar producto</a></li>
-            <li><a href="producto/ver-productos.html">Ver productos</a></li>
-            <li><a href="pedido/agregar-pedido.html">Agregar pedido</a></li>
-            <li><a href="pedido/ver-pedidos.html">Ver pedidos</a></li>
+            <li><a href="{{ url_for('agregar_producto') }}">Agregar producto</a></li>
+            <li><a href="{{ url_for('ver_productos') }}">Ver productos</a></li>
+            <li><a href="{{ url_for('agregar_pedido') }}">Agregar pedido</a></li>
+            <li><a href="{{ url_for('ver_pedidos') }}">Ver pedidos</a></li>
         </ul>
     </div>
-</body>
-</html>
+{% endblock %}
+
+
