--- a/Tareas/Tarea2/app/templates/pedidos/informacion-pedido.html
+++ b/Tareas/Tarea2/app/templates/pedidos/informacion-pedido.html
@@ -1,22 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> FrutiVerde Online</title>
-    <link rel="stylesheet" href="../../css/informacion-pedido.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Roboto&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div class="navbar">
-        <img id="logo-id" src="../../fruit-basket-icon.svg" alt="Logo">
-        <h1>FrutiVerde Online</h1>
-        <a class="navbar-page" href="../../html/index.html">Inicio</a>
-        <a class="navbar-page" href="../../html/pedido/ver-pedidos.html">Volver al listado</a>
-
-    </div>
+{%extends 'base.html'%}
+{% block css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/informacion-pedido.css') }}">
+{% endblock %}
+{% block content %}
     <div class="container">
         <h1>Información Pedido</h1>
         <table>
@@ -36,6 +22,6 @@
             </tr>
         </table>
     </div>
-<script src="../../js/informacion-pedido.js"></script>
-</body>
-</html>
+{% endblock content %}
+
+
