--- a/Tareas/Tarea2/app/templates/pedidos/agregar-pedido.html
+++ b/Tareas/Tarea2/app/templates/pedidos/agregar-pedido.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="container">
         <h2>Agregar Pedido</h2>
-        <form id="orderForm">
+        <form id="orderForm" action="{{url_for('agregar_pedido')}}" method="post">
 
             <label for="tipoProducto1">Producto 1:</label>
             <select class="tipoProducto" id="tipoProducto1" name="tipoProducto1">
