--- a/Tareas/Tarea2/app/templates/productos/agregar-producto.html
+++ b/Tareas/Tarea2/app/templates/productos/agregar-producto.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="container">
         <h2>Agregar Producto</h2>
-        <form id="productForm">
+        <form id="productForm" action="{{url_for('agregar_producto')}}" method="post" >
 
             <label for="tipoProducto1">Producto 1:</label>
             <select class="tipoProducto" id="tipoProducto1" name="tipoProducto1">
