--- a/Tareas/Tarea2/app/templates/productos/informacion-producto.html
+++ b/Tareas/Tarea2/app/templates/productos/informacion-producto.html
@@ -3,26 +3,63 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/informacion-producto.css') }}">
 {% endblock %}
 {% block content %}
-    <div class="container">
+    <div class="product-container">
         <h1>Información Producto</h1>
-        <table>
-            <tr>
-                <th> Tipo</th>
-                <th> Producto(s)</th>
-                <th> Región</th>
-                <th> Comuna</th>  
-            </tr>
-            <tr>
-                <td> Fruta </td>
-                <td> Manzana </td>
-                <td> Región Metropolitana </td>
-                <td> Providencia </td>
-            </tr>
-        </table>
-        <div> <img id="fotoProducto" src="../../media/medium/manzana_medium.png" alt="Foto Producto"> </div>
-        </div>
+        {% if data %}
+            <table>   
+                <tr>
+                    <th> Tipo</th>
+                    <th> Producto(s)</th>
+                    <th> Descripción</th>
+                    <th> Región</th>
+                    <th> Comuna</th>
+                    <th> Nombre Productor</th>
+                    <th> Email Productor</th>
+                    <th> Teléfono Productor</th>
+                     
+                </tr>
+                <tr>
+                    <td> {{data.tipo}} </td>
+                    <td> {{data.productos}} </td>
+                    <td> {{data.descripcion}} </td>
+                    <td> {{data.region}} </td>
+                    <td> {{data.comuna}} </td>
+                    <td> {{data.nombre}} </td>
+                    <td> {{data.email}} </td>
+                    <td> {{data.celular}} </td>
+                </tr>
+            </table>
+            <div class="fotos">
+                <h2>Fotos:</h2>
+                <p> Click en las fotos para verlas en tamaño completo </p>
+                {% for foto in data.fotos %}
+                    <div class="foto-container">
+                        <img src="{{ url_for('static', filename= foto) }}" alt="Foto de {{ data.productos }}" />
+                    </div>
+                {% endfor %}
+            </div>
+    </div>    
+
+    
+        {% endif %}
+        
 {% endblock content %}
-<script src="{{ url_for('static', filename='js/informacion-producto.js') }}"></script>
-{% block javascript %}{% endblock %}
+{% block javascript %}
+<script>
+    let images = document.querySelectorAll('.fotos img');
+    images.forEach(function(img) {
+        img.addEventListener('click', function() {
+            let originalFilename = '/medium/' +'{{ data.foto }}';
+            let newFilename = '/big/' + '{{ data.foto}}';
+
+            if (img.src.includes(originalFilename)) {
+                img.src = img.src.replace(originalFilename, newFilename);
+            } else {
+                img.src = img.src.replace(newFilename, originalFilename);
+            }
+        });
+    });
+</script>
+{% endblock %}
 
 
