--- a/Tareas/Tarea2/app/static/css/index.css
+++ b/Tareas/Tarea2/app/static/css/index.css
@@ -1,73 +1,63 @@
 :root {
     --black-color: #000022;
-    --background-color: #E8E6F0;
+    --background-color: #fce2b0;
     --pink-color: #FC2865;
+    --green-color: #8cc327;
+    --font-family: 'Roboto', sans-serif;
 }
 
 body {
-    font-family: sans-serif;
+    font-family: var(--font-family);
     margin: 0;
     padding: 0;
-    background-color: #e8ddc9;
+    background-color: var(--background-color);
 }
 
 .navbar {
     display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
-    background: rgb(140, 195, 39);
+    background: var(--green-color);
     border: .2em solid var(--black-color);
     border-radius: .25em;
-    margin: 1em 1em 2em 1em;
-    box-shadow: .3em .3em 0px 0px black;
+    margin: 1em;
+    padding: 1em;
+    box-shadow: .3em .3em 0px 0px rgba(0, 0, 0, 0.1);
 }
 
 .navbar > * {
     color: var(--black-color);
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-family);
 }
 
 #logo-id {
-    margin: 0 auto;
     width: 2%;
     padding: .5em;
     border: .2em solid var(--black-color);
-    margin: .1em .25em .1em 1.5em;
-    box-shadow: .15em .15em 0px 0px black;
+    margin-right: 1em;
+    box-shadow: .15em .15em 0px 0px rgba(0, 0, 0, 0.1);
     border-radius: .25em;
 }
 
 .navbar h1 {
     font-family: "Fira Code", monospace;
-    margin: .5em;
-    margin-right: auto;
+    margin: 0;
+    font-size: 1.5em;
 }
 
 .navbar a {
-    position: relative;
     text-decoration: none;
-    margin: 0 2em;
+    margin: 0 1em;
     padding: .25em;
     font-weight: 600;
     font-size: 1rem;
+    transition: color 0.3s ease;
 }
 
-.navbar-page::after{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 0.175em;
-    background: var(--black-color);
-    left: 0;
-    bottom: 0;
-    transform: scale(0, 1);
-    transition: transform 0.3s ease;
+.navbar a:hover {
+    color: var(--pink-color);
 }
 
-.navbar-page:hover::after {
-    transform: scale(1, 1);
-}
 .container {
     max-width: 800px;
     margin: 50px auto;
@@ -79,31 +69,33 @@ body {
 
 .container h1{
     font-family: "Fira Code", monospace;
+    color: var(--black-color);
 }
 
 ul.menu {
     list-style-type: none;
     padding: 0;
     margin: 0;
+    display: flex;
+    justify-content: center;
 }
 
 ul.menu li {
-    display: inline-block;
-    margin-right: 20px;
+    margin: 0 10px;
 }
 
 ul.menu li a {
-    font-family: sans-serif;
     padding: 10px 20px;
-    background-color: #4CAF50;
-    color: rgb(0, 0, 0);
+    background-color: var(--green-color);
+    color: var(--black-color);
     border: none;
     border-radius: 10px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 ul.menu li a:hover {
-    background-color: rgb(140, 195, 39);
+    background-color: var(--pink-color);
 }
 
 .error-message {
@@ -116,6 +108,7 @@ ul.menu li a:hover {
     width: 50%;
     margin: 0 auto; 
 }
+
 .confirmation-message {
     border: blue solid 1px;
     border-radius: 5%;
