--- a/Tareas/Tarea2/app/static/css/ver-productos.css
+++ b/Tareas/Tarea2/app/static/css/ver-productos.css
@@ -47,4 +47,35 @@ body {
 .products-table td {
     cursor: pointer;
 }
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin: 20px auto; 
+    padding: 10px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    border-radius: 10px; 
+}
 
+.pagination a {
+    margin: 0 10px;
+    padding: 5px 10px;
+    border: 1px solid #000000;
+    text-decoration: none;
+    color: #333;
+    border-radius: 5px; 
+}
+.pagination p {
+    margin: 0 10px;
+    line-height: 30px;
+}
+
+.pagination a:hover {
+    background-color: #ababab;
+}
+.pagination-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px; 
+}
