Html validado y estetica

--- a/Tareas/Tarea2/app/templates/productos/agregar-producto.html
+++ b/Tareas/Tarea2/app/templates/productos/agregar-producto.html
@@ -21,7 +21,7 @@
             </div>
 
             <label for="descripcion">Descripción:</label>
-            <textarea name="Descripcion" id="descripcion" cols="50" rows="4"></textarea>
+            <textarea name="Descripcion" id="descripcion" cols="50" rows="4" placeholder="Max. 300 caracteres"></textarea>
 
             {% for i in range(1, 4) %}
             <label for="foto{{ i }}">Foto {{ i }}:</label>
