--- a/Tareas/Tarea2/app/static/css/index.css
+++ b/Tareas/Tarea2/app/static/css/index.css
@@ -1,7 +1,7 @@
 :root {
     --black-color: #000022;
     --background-color: #fce2b0;
-    --pink-color: #FC2865;
+    --white-color: #ffffff;
     --green-color: #8cc327;
     --font-family: 'Roboto', sans-serif;
 }
@@ -15,7 +15,7 @@ body {
 
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
     background: var(--green-color);
     border: .2em solid var(--black-color);
@@ -42,22 +42,28 @@ body {
 .navbar h1 {
     font-family: "Fira Code", monospace;
     margin: 0;
-    font-size: 1.5em;
+    font-size: 2em;
+}
+.navbar a.navbar-page {
+    padding: 10px 20px; 
+    border: 1px solid #ccc; 
+    border-radius: 10px; 
+    text-decoration: none; 
 }
 
 .navbar a {
     text-decoration: none;
     margin: 0 1em;
+    margin-left: auto; 
     padding: .25em;
     font-weight: 600;
-    font-size: 1rem;
-    transition: color 0.3s ease;
+    font-size: 1.2rem;
+    transition: color 1s ease, background-color 0.3s ease; 
+    background-color: #f2f2f2; 
 }
-
 .navbar a:hover {
-    color: var(--pink-color);
+    background-color: var(--background-color); 
 }
-
 .container {
     max-width: 800px;
     margin: 50px auto;
@@ -82,20 +88,34 @@ ul.menu {
 
 ul.menu li {
     margin: 0 10px;
+    background-color: var(--background-color);
+    border-radius: 10px;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15); 
+}
+
+ul.menu li:hover {
+    background-color: var(--green-color);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
 }
 
 ul.menu li a {
-    padding: 10px 20px;
-    background-color: var(--green-color);
+    padding: 30px 40px;
     color: var(--black-color);
     border: none;
-    border-radius: 10px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: color 0.3s ease; 
+    font-weight: 700; 
+    font-size: 1.2rem;;
+    text-align: center; 
+    text-decoration: none; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
 }
 
 ul.menu li a:hover {
-    background-color: var(--pink-color);
+    color: var(--white-color);
 }
 
 .error-message {
